[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/interface/fixture.gd" type="Script" id=1]

[node name="Fixture" type="TextureRect" groups=[
"fixtures",
]]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )
mouse_filter = 0
mouse_default_cursor_shape = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
enable_time = 0.5

[node name="EnableTimer" type="Timer" parent="."]
one_shot = true

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="timeout" from="EnableTimer" to="." method="_on_enable_timer_timeout"]
